<resources>
    <string name="app_name" translatable="false">HelpWheel</string>
    <!-- bnb -->
    <string name="title_notes">Notes</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Trip</string>
    <!-- weather -->
    <string name="enter_city">Please, enter a city</string>
    <string name="weather_btn">Submit</string>
    <string name="current_weather">Here will be displayed current weather</string>
    <string name="error_weather">Something went wrong, try again</string>
    <string name="api_key" translatable="false">a98ca7720a8fd711bb8548bf2373e263</string>
    <string name="temperature_is">Temperature in your city is </string>
    <string name="feels_like">Feels like: </string>
    <string name="wind_speed">Wind`s speed: </string>
    <string name="weather_desc">Description: </string>
    <string name="degree_cels" translatable="false">℃</string>
    <string name="speed">KM/H</string>
    <string name="type_input">Auto</string>
    <!-- auth -->
    <string name="greeting_auth">Hello!</string>
    <string name="enter_name_auth">Please, enter your name</string>
    <string name="btn_auth">Go</string>

    <!-- notes -->
    <string name="add_a_note">Add a note</string>
    <string name="hello_user">Hello, User!</string>
    <string name="description">When?</string>
    <string name="title">what has been repaired?</string>
    <string name="save_a_note">Add Note</string>
    <string name="update_note">Update Note</string>
    <string name="wow_such_empty">wow, such empty!</string>
    <string name="web_site">Web site (optional)</string>
    <string name="both_fields_required">Both Fields Required</string>
    <!-- fuel manager -->
    <string name="kms_placeholder">Your last ride:</string>
    <string name="enter_data">Enter data</string>
    <string name="enter_odometer">Odometer (KM)</string>
    <string name="enter_price">Price (Per liter)</string>
    <string name="submit">Submit</string>
    <string name="km" translatable="false"> KM</string>
    <string name="ok" translatable="false">OK</string>
    <string name="zero" translatable="false">0.0</string>
    <string name="last_ride_price">Cost:</string>
    <string name="welcome_to_helpwheel">Welcome to HelpWheel!</string>
    <string name="manage_your_car_like_you_want">Manage your car like you want</string>
    <string name="continue_text">Continue</string>
    <string name="almost_there_text">you`re almost there!</string>
    <string name="enter_some_data_text">Just enter some data about your car</string>
    <string name="enter_car_consumption_per_100km">Enter car consumption per 100km</string>
    <string name="enter_car_fuel_tank_capacity">Enter car fuel tank capacity</string>
    <string name="on_item_deleted">Note has been deleted</string>
    <string name="undo">Undo</string>
    <string name="hello_user_text">"Hello,"</string>
    <string name="edit_text_odometer_error">Enter odometer value</string>
    <string name="field_must_be_filled">This field must be filled</string>
    <string name="enter_city_message">Enter city!</string>
    <string name="enter_new_data">Enter new data</string>
    <string name="save">Save</string>
    <string name="distance_text">Distance:</string>
    <string name="select_a_date">Select a date</string>
    <string name="you_spent">You spent</string>
    <string name="co2_you_ve_produced">CO2 you`ve produced:</string>
    <string name="if_you_use_gasoline">Gasoline:</string>
    <string name="if_you_use_diesel">Diesel:</string>
    <string name="plan_a_ride">Plan a ride:</string>
    <string name="litres_have_left">Litres in the tank</string>
    <string name="litres_symbol">L</string>
    <string name="grams_sign">g</string>
    <string name="you_will_spend">You will spend:</string>
    <string name="co2_you_will_produce">CO2 you will produce:</string>
    <string name="distance">Distance (KM)</string>
    <string name="next_ride">Next ride</string>
    <string name="last_ride">Last ride</string>
    <string name="enter_current_fuel_level">Enter current fuel level</string>
    <string name="remains_in_the_tank">Remains fuel:</string>
    <string name="hey_there">Hey there!</string>
    <string name="please_let_us_know_your_odometer_reading">Please, let us know your odometer reading</string>
    <string name="remove_odometer_reading">Remove odometer reading</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete_all_data">You`ll delete all data about your last ride and odometer readings</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="fuel_level_is_bigger_than_capacity">You can`t have more fuel than your tank can contain!</string>
    <string name="full_tank">Full tank</string>
    <string name="thunderstorm">Thunderstorm</string>
    <string name="drizzle">Drizzle</string>
    <string name="rain">Rain</string>
    <string name="snow">Snow</string>
    <string name="cloudy">Cloudy</string>
    <string name="few_clouds">A little cloudy</string>
    <string name="sunny">Clear sky</string>
    <string name="squalls">Squalls</string>
    <string name="tornado">Tornado!</string>
    <string name="fog">Foggy</string>
    <string name="no_data">no data</string>
    <string name="description_weather">Description</string>
    <string name="temperature">temperature</string>
    <string name="no_gps_text">Turn on GPS</string>
    <string name="you_ve_entered_wrong_odometer_readings">You\'ve entered wrong odometer readings</string>
    <string name="wind">wind</string>
    <string name="kyiv">Kyiv</string>
    <string name="select_date_text">Select a date</string>
    <string name="balloon_refueling">After refueling you can enter your fuel level</string>
    <string name="balloon_edit_profile_here">Edit your profile here</string>
    <string name="balloon_odometer_readings">You can remove your odometer readings here</string>
    <string name="internet_error">No internet connection</string>
    <string name="balloon_fuelStats">You can change type of ride by swiping there</string>

</resources>