<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/title"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:nextFocusDown="@id/description"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/description"
        android:imeOptions="actionNext"
        android:inputType="date"
        android:nextFocusDown="@id/web_ulr" />

    <EditText
        android:id="@+id/web_ulr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_margin="8dp"
        android:hint="@string/web_site"
        android:inputType="textUri" />

    <Button
        android:id="@+id/updateNote"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:backgroundTint="@color/dark"
        android:text="@string/update_note"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@id/web_ulr"
        android:layout_alignBottom="@id/updateNote"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/ic_updating_notes_image" />

</RelativeLayout>