<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome_screens.EnterWelcomeDataFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="20dp"
        android:src="@drawable/ic_welcome_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/almost_there_text"
        style="@style/WelcomeDialogTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/almost_there_text"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/enter_some_data_test"
        style="@style/WelcomeDialogSubTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/enter_some_data_text"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/almost_there_text" />

    <EditText
        android:id="@+id/enter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/round_edittext"
        android:hint="@string/enter_name_auth"
        android:padding="10dp"
        android:textColor="@color/dark"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/consumption_per_100km"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_some_data_test" />

    <EditText
        android:id="@+id/consumption_per_100km"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/round_edittext"
        android:hint="@string/enter_car_consumption_per_100km"
        android:padding="10dp"
        android:textColor="@color/dark"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonOK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_some_data_test" />

    <EditText
        android:id="@+id/fuel_tank_capacity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/round_edittext"
        android:hint="@string/enter_car_fuel_tank_capacity"
        android:padding="10dp"
        android:textColor="@color/dark"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonOK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/consumption_per_100km" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonOK"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/dark"
        android:text="@string/continue_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>