<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingTop="14dp"
    android:paddingEnd="30dp"
    android:paddingBottom="30dp">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="6dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/figure_on_bottom_sheet_dialog" />

    <EditText
        android:id="@+id/odometer_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/round_edittext"
        android:hint="@string/enter_odometer"
        android:inputType="numberDecimal"
        android:maxLength="14"
        android:padding="10dp"
        android:textColorHint="@color/gray" />

    <EditText
        android:id="@+id/price_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:background="@drawable/round_edittext"
        android:hint="@string/enter_price"
        android:inputType="numberDecimal"
        android:maxLength="14"
        android:padding="10dp"
        android:textColorHint="@color/gray" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_btn_fuel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/dark"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:cornerRadius="20dp" />
</LinearLayout>