<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:id="@+id/note_layout">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp"
        android:backgroundTint="@color/darker">
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content" >

           <TextView
               android:id="@+id/title"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginStart="6dp"
               android:layout_marginTop="6dp"
               android:layout_marginEnd="6dp"
               android:layout_marginBottom="6dp"
               android:text="@string/title"
               android:textColor="@color/white"
               android:textSize="18sp"
               android:textStyle="bold" />



           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/description"
               android:textStyle="bold"
               android:textColor="@color/white"
               android:layout_margin="6dp"
               android:textSize="18sp"
               android:id="@+id/description"
               android:layout_below="@+id/title"/>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/web_site"
               android:textStyle="bold"
               android:textColor="@color/white"
               android:layout_margin="6dp"
               android:textSize="18sp"
               android:id="@+id/web_url"
               android:layout_below="@+id/description"
               android:visibility="visible"/>


       </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>